--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,30 @@
-[package]
-name = "bingtray"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver = "2"  
+members = [
+    "bingtray-core",
+    "bingcli", 
+    "bingtray-gui"
+]
 
-[dependencies]
+[workspace.dependencies]
 directories = "5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1.0", features = ["full"] }
+attohttpc = { version = "0.28", default-features = false, features = ["tls-rustls-webpki-roots"] }
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 rand = "0.8"
-tray-icon = "0.21.0"
-winit = "0.30"
-image = "0.25"
+regex = "1.10"
+scraper = "0.20"
+clap = { version = "4.4", features = ["derive"] }
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
+opt-level = 3
+debug = 0
+strip = "symbols"
+
+[profile.release-with-symbols]
+inherits = "release"
+strip = false
