--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -163,7 +163,7 @@ jobs:
         with:
           # Finally, we store the binary as GitHub artifact for later usage
           name: bingcli-${{ matrix.platform.target }}
-          path: target/${{ matrix.platform.target }}/release${{ contains(matrix.platform.target, 'windows') && '-with-symbols' || '' }}/bingcli-*
+          path: target/${{ matrix.platform.target }}/release${{ contains(matrix.platform.target, 'windows') && '-with-symbols' || '' }}/bingcli*
           retention-days: 1
 
       - name: Store artifact Gui
