fix. remove powershell_script crate from default build because of virustotal detects. if anyone wants, build if yourself.

--- a/bingtray-core/Cargo.toml
+++ b/bingtray-core/Cargo.toml
@@ -14,5 +14,8 @@ rand = { workspace = true }
 regex = { workspace = true }
 scraper = { workspace = true }
 
+[features]
+powershell_script = ["dep:powershell_script"]
+
 [target.'cfg(windows)'.dependencies]
-powershell_script = "1.1"
+powershell_script = { version = "1.1", optional = true }
