--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,10 +85,10 @@ jobs:
             target: x86_64-pc-windows-msvc
             build-args: "--profile release-with-symbols"
 
-          - name: Windows x86
-            os: windows-latest
-            target: i686-pc-windows-msvc
-            build-args: "--profile release-with-symbols"
+          # - name: Windows x86
+          #   os: windows-latest
+          #   target: i686-pc-windows-msvc
+          #   build-args: "--profile release-with-symbols"
 
     steps:
       - name: Install package for linux
