--- a/bingtray-gui/Cargo.toml
+++ b/bingtray-gui/Cargo.toml
@@ -17,6 +17,7 @@ rand = { workspace = true }
 clap = { workspace = true }
 tray-icon = "0.18"
 tao = "0.30"
+open = "5.0"
 
 
 [target."cfg(target_os = \"windows\")".dependencies.windows-sys]
