--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,15 @@ resolver = "2"
 members = [
     "bingtray-core",
     "bingcli", 
-    "bingtray-gui"
+    "bingtray-gui",
+    "bingtray-and"
 ]
+
+[workspace.package]
+edition = "2021"
+license = "MIT OR Apache-2.0"
+rust-version = "1.81"
+version = "0.0.1"
 
 [workspace.dependencies]
 directories = "5.0"
