--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ version = "0.0.1"
 
 [workspace.dependencies]
 directories = "5.0"
+wallpaper = "3.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 attohttpc = { version = "0.28", default-features = false, features = ["tls-rustls-webpki-roots"] }
