--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,10 +78,8 @@ jobs:
           # - name: iOS x86_64
           #   target: x86_64-apple-ios
 
-
           #- name: iOS aarch64
           #  target: aarch64-apple-ios
-
 
           # Windows
           - name: Windows x86_64
@@ -126,7 +124,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
-      # Linux & Windows
       - name: Install rust toolchain for Linux
         uses: actions-rs/toolchain@v1
         with:
@@ -137,21 +134,43 @@ jobs:
           target: ${{ matrix.platform.target }}
           components: rustfmt, clippy
 
+      - name: Decode keystore
+        if: contains(matrix.platform.target, 'android')
+        id: android_keystore
+        uses: timheuer/base64-to-file@v1.0.3
+        with:
+          fileName: mobile-release-key.keystore
+          fileDir: './target/x/release/android/keys/'
+          encodedString: ${{ secrets.KEYSTORE_BASE64 }}
+      
       - name: Install package for Android
         if: contains(matrix.platform.target, 'android')
-        run: cargo install cross --git https://github.com/cross-rs/cross
+        run: | 
+          cargo install cross --git https://github.com/cross-rs/cross
+          cargo install xbuild --git https://github.com/nikescar/xbuild
 
       - name: Show command used for Cargo
         run: |
           echo "cargo command is: ${{ env.CARGO }}"
           echo "target flag is: ${{ env.BUILD_ARGS }}"
-
-      - name: Native mobile debug apk Build ${{ matrix.platform.name }} binary # android debug apk and release aab build
-        if: "contains(matrix.platform.name, 'Android APK arm64')" 
-        run: cd mobile && bash ./build.sh && x build --arch arm64 --platform android --release && cd ..
+      
+      - name: Native mobile release apk Build ${{ matrix.platform.name }} binary # android release apk build
+        if: (contains(matrix.platform.name, 'Android APK arm64'))
+        run: | 
+          pushd mobile
+          bash ./build.sh
+          x build --arch arm64 --platform android --release \
+          --android-sign-keystore keys/mobile-release-key.keystore --android-sign-storepass ${{ secrets.STORE_PASSWORD }} \
+          --android-sign-keypass ${{ secrets.KEY_PASSWORD }} --android-sign-keyname ${{ secrets.KEY_ALIAS }}
+          x build --arch x64 --platform android --release \
+          --android-sign-keystore keys/mobile-release-key.keystore --android-sign-storepass ${{ secrets.STORE_PASSWORD }} \
+          --android-sign-keypass ${{ secrets.KEY_PASSWORD }} --android-sign-keyname ${{ secrets.KEY_ALIAS }}
+          mv target/x/debug/android/mobile-x64-signed.apk target/x/debug/android/bingtray-x64-signed.apk
+          mv target/x/debug/android/mobile-arm64-signed.apk target/x/debug/android/bingtray-arm64-signed.apk
+          popd
 
       - name: Cross bingcli Build ${{ matrix.platform.name }} binary
-        if: "!contains(matrix.platform.name, 'Android APK arm64')"
+        if: (!contains(matrix.platform.name, 'Android APK arm64'))
         uses: actions-rs/cargo@v1
         # We use cross-rs if not running on x86_64 architecture on Linux
         with:
@@ -167,8 +186,8 @@ jobs:
           command: build
           args: ${{ matrix.platform.build-args }} --package bingtray-gui
 
-      - name: Store artifact Cli
-        if: "!contains(matrix.platform.name, 'Android APK arm64')"
+      - name: Store artifact bingcli
+        if: (!contains(matrix.platform.name, 'Android APK arm64'))
         uses: actions/upload-artifact@v4
         with:
           # Finally, we store the binary as GitHub artifact for later usage
@@ -177,7 +196,7 @@ jobs:
           retention-days: 1
 
       - name: Store artifact Gui
-        if: "!contains(matrix.platform.name, 'Android APK arm64')"
+        if: (!contains(matrix.platform.name, 'Android APK arm64'))
         uses: actions/upload-artifact@v4
         with:
           # Finally, we store the binary as GitHub artifact for later usage
@@ -185,22 +204,20 @@ jobs:
           path: target/release${{ contains(matrix.platform.target, 'windows') && '-with-symbols' || '' }}/bingtray-*
           retention-days: 1
       
-      - name: Store artifact Android debug apk
-        if: "contains(matrix.platform.name, 'Android APK arm64')"
+      - name: Store artifact Android release arm64 apk
+        if: (contains(matrix.platform.name, 'Android APK arm64'))
         uses: actions/upload-artifact@v4
         with:
-          # Finally, we store the binary as GitHub artifact for later usage
-          name: mobile-arm64-debug.apk
-          path: target/x/debug/android/mobile.apk
+          name: bingtray-arm64-signed.apk
+          path: target/x/debug/android/bingtray-arm64-signed.apk
           retention-days: 1
       
-      - name: Store artifact Android release aab
-        if: "contains(matrix.platform.name, 'Android APK arm64')"
+      - name: Store artifact Android release x64 apk
+        if: (contains(matrix.platform.name, 'Android APK arm64'))
         uses: actions/upload-artifact@v4
         with:
-          # Finally, we store the binary as GitHub artifact for later usage
-          name: mobile-arm64-release.aab
-          path: target/x/release/android/mobile.aab
+          name: bingtray-x64-signed.apk
+          path: target/x/release/android/bingtray-x64-signed.apk
           retention-days: 1
 
   release:
@@ -229,8 +246,8 @@ jobs:
           do
               if [ -d "$i" ]
               then
-                  [[ "$i" == *".apk"* ]] && cp artifacts/mobile-arm64-debug.apk/mobile.apk distbin/mobile-arm64-debug.apk && continue
-                  [[ "$i" == *".aab"* ]] && cp artifacts/mobile-arm64-release.aab/mobile.aab distbin/mobile-arm64-unsigned-release.aab && continue
+                  [[ "$i" == *"bingtray-arm64-signed.apk"* ]] && cp artifacts/bingtray-arm64-signed.apk/bingtray-arm64-signed.apk distbin/bingtray-arm64-signed.apk && continue
+                  [[ "$i" == *"bingtray-x64-signed.apk"* ]] && cp artifacts/bingtray-x64-signed.apk/bingtray-x64-signed.apk distbin/bingtray-x64-signed.apk && continue
                   cp LICENSE* "$i"
                   cp README.md "$i"
                   rm "$i/bingcli.d" 1>/dev/null 2>&1 || true
