--- a/bingtray-core/Cargo.toml
+++ b/bingtray-core/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "bingtray-core"
-version = "0.0.1"
-edition = "2021"
+version.workspace = true
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 directories = { workspace = true }
