--- a/bingtray-gui/Cargo.toml
+++ b/bingtray-gui/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "bingtray-gui"
-version = "0.0.1"
-edition = "2021"
-license = "MIT OR Apache-2.0"
 build = "build.rs"
+version.workspace = true
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [[bin]]
 name = "bingtray-gui"
