--- a/bingtray-gui/Cargo.toml
+++ b/bingtray-gui/Cargo.toml
@@ -28,6 +28,7 @@ features = [
   "Win32_UI_WindowsAndMessaging",
   "Win32_Foundation",
   "Win32_System_SystemServices",
+  "Win32_System_Console",
   "Win32_Graphics_Gdi",
   "Win32_UI_Shell",
 ]
