--- a/android/Cargo.toml
+++ b/android/Cargo.toml
@@ -3,8 +3,10 @@
 
 [package]
 name = "bingtray-android"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [features]
 default = ["serde"]
