--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <meta-data android:name="android.app.lib_name" android:value="bingtray_android" />
+            <meta-data android:name="android.app.lib_name" android:value="bingtray_mobile" />
         </activity>
     </application>
 
