--- a/pe.nikescar.bingtray.yml
+++ b/pe.nikescar.bingtray.yml
@@ -31,21 +31,13 @@ Builds:
       rustup target add armv7-linux-androideabi aarch64-linux-android i686-linux-android x86_64-linux-android
       cargo install cargo-ndk
     scanignore:
-      - android/Cargo.toml
-      - bingcli/Cargo.toml
+      - mobile/Cargo.toml
       - bingtray-core/Cargo.toml
-      - bingtray-gui/Cargo.toml
+      - bingtray/Cargo.toml
       - Cargo.toml
     build: |
       echo 'started build'
-      cd android
-      export APPLICATION_VERSION_NAME=$(grep -m1 "^version = " ../Cargo.toml | cut -d' ' -f3 | tr -d '"')
-      export APPLICATION_VERSION_CODE=5
-      cargo ndk -t armeabi-v7a -o app/src/main/jniLibs/ build --release
-      cargo ndk -t arm64-v8a -o app/src/main/jniLibs/ build --release
-      cargo ndk -t x86 -o app/src/main/jniLibs/ build --release
-      cargo ndk -t x86_64 -o app/src/main/jniLibs/ build --release
-      ./gradlew assembleRelease
+      cd mobile && ./build.fd.sh
     postbuild: echo 'postbuild.'
     antifeatures:
       - NonFreeAssets
